--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "example": "example"
   },
   "scripts": {
-    "flow": "flow",
-    "lint": "eslint .",
-    "test": "jest",
     "prepare": "yarn build && yarn build:flow",
-    "build": "babel src -d build --ignore '**/*.test.js'",
-    "rollup": "rollup -c",
-    "build:flow": "flow-copy-source -v -i '*.test.js' src build",
+    "flow": "flow",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage --ci --runInBand",
-    "test:ci": "yarn flow && yarn lint && yarn test:cov"
+    "codecov": "codecov -t b8ed6a1e-0f73-49e8-9579-514e1171b75c",
+    "rollup": "rollup -c",
+    "build:flow": "flow-copy-source -v -i '*.test.js' src build",
+    "build": "babel src -d build --ignore '**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -44,10 +45,11 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "codecov": "^3.0.0",
     "eslint": "^4.18.2",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "flow-bin": "^0.66.0",
+    "flow-bin": "^0.68.0",
     "flow-copy-source": "^1.3.0",
     "jest": "^22.4.2",
     "prettier": "^1.11.1",
@@ -56,7 +58,7 @@
     "react-dom": "^16.2.0",
     "redux": "^3.7.2",
     "regenerator-runtime": "^0.11.1",
-    "rollup": "^0.56.5",
+    "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-node-resolve": "^3.2.0"
