fix(jest): exclude testutils.js from collectCoverage

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,mjs}",
-      "!src/index.js"
+      "!src/index.js",
+      "!src/testutils.js"
     ]
   },
   "devDependencies": {
