--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "redux": "^3.7.2",
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.58.1",
     "rollup-plugin-babel": "^3.0.3",
@@ -83,5 +82,7 @@
     "rollup-plugin-node-resolve": "^3.2.0",
     "rollup-plugin-uglify": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "redux": "^4.0.0"
+  }
 }
