--- a/example/package.json
+++ b/example/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
+    "react-scripts": "^1.1.4",
+    "redux": "^4.0.0",
     "redux-vanilla": "^0.0.1-beta2",
     "styled-components": "^3.2.5"
   },
@@ -17,6 +17,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "flow-bin": "^0.69.0"
+    "flow-bin": "^0.72.0"
   }
 }
