split circle ci #13

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "flow": "flow",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
-    "test": "jest --coverage",
+    "test": "jest",
+    "test:cov": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:watch:verbose": "jest --coverage --watch --verbose",
     "codecov": "codecov -t $CODECOV_TOKEN",
