--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "codecov": "codecov -t $CODECOV_TOKEN",
     "build:commonjs": "NODE_ENV=cjs rollup -c -o lib/index.js",
     "build:es": "NODE_ENV=es rollup -c -o es/index.js",
-    "build": "yarn build:commonjs && yarn run build:es",
+    "build": "yarn build:commonjs && yarn run build:es && yarn build:flow",
+    "build:flow": "flow-copy-source -i *.test.js src es && flow-copy-source -i *.test.js src lib",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
@@ -70,6 +71,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
     "flow-bin": "^0.73.0",
+    "flow-copy-source": "^1.3.0",
     "jest": "^23.0.1",
     "prettier": "^1.11.1",
     "regenerator-runtime": "^0.11.1",
