--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "babel-preset-react": "^6.24.1",
     "codecov": "^3.0.0",
     "eslint": "^4.18.2",
+    "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
     "flow-bin": "^0.73.0",
