--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-vanilla",
-  "version": "0.0.1-beta6",
+  "version": "1.0.0",
   "description": "Zero Abstraction React Redux binding library",
   "repository": {
     "type": "git",
