--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.3.0",
     "react-scripts": "^1.1.4",
     "redux": "^4.0.0",
-    "redux-vanilla": "^0.0.1-beta5",
+    "redux-vanilla": "^1.0.0",
     "styled-components": "^3.2.5"
   },
   "scripts": {
